--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,15 @@
   "main": "server.js",
   "author": "fadhilsaheer",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^4.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
