--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "apollo-server": "^2.23.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "redis": "^3.1.1",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
