--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^2.23.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "redis": "^3.1.1",
     "socket.io": "^4.0.1"
   },
