--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "redis": "^3.1.1",
+    "shortid": "^2.2.16",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
