🔑 added jwt key in env example

--- a/server/.env-template
+++ b/server/.env-template
@@ -2,3 +2,5 @@ PG_USER = postgres_username
 PG_HOST = postgres_host
 PG_PASSWORD = super_secret_postgres_password
 PG_PORT = postgres_port
+
+JWT_KEY = your_super_secret_jwt_key
