--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
