--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.15",
     "@chakra-ui/react": "^1.5.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
+    "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "next": "10.1.3",
