--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^4.0.0",
     "framer-motion": "^4",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "next": "10.1.3",
