--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.5.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "bcrypt": "^5.0.1",
     "crypto-js": "^4.0.0",
     "framer-motion": "^4",
     "graphql": "^15.5.0",
