--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "next": "10.1.3",
+    "pure-md5": "^0.1.13",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
