--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11",
     "@heroicons/react": "^1.0.1",
     "apollo-link-context": "^1.0.20",
+    "axios": "^0.21.1",
     "framer-motion": "^4",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
