--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "next": "10.1.3",
     "pure-md5": "^0.1.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "^4.0.2"
   }
 }
