--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "apollo-server": "^2.23.0",
+    "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.1",
+    "connect": "^3.7.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
