--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.24.0",
     "bcrypt": "^5.0.1",
     "connect": "^3.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
